[project]
name = "repx-py"
version = "0.1.0"
description = "A library for analyzing RepX lab results."
dependencies = [
    "pandas",
    "graphviz>=0.20",
]

[project.scripts]
debug-runner = "repx_py.cli.debug_runner:main"
trace-params = "repx_py.cli.trace_params:main"
repx-viz = "repx_py.visualize:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["repx_py*"]
